--- a/src/components/stickers/Stickers.css
+++ b/src/components/stickers/Stickers.css
@@ -131,5 +131,13 @@
 }
 
 .decline {
-  background-color: red;
+  background-color: #ff1867;
+}
+
+.reload-btn {
+  padding: 5px 10px;
+  background-color: #ff1867;
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
