--- a/src/components/orders/Order.css
+++ b/src/components/orders/Order.css
@@ -68,6 +68,7 @@
   box-shadow: 0 0 5px gray;
   position: relative;
   min-height: 130px;
+  min-width: 191px;
   z-index: 10;
   display: flex;
   justify-content: center;
