--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 15px;
-  padding: 25px;
+  gap: 25px;
+  padding: 35px;
   z-index: 1;
 }
 
@@ -59,8 +59,11 @@ html {
   padding: 0 10px;
 }
 
-.create-sticker-form input,
-.create-sticker-form select,
+.create-sticker-form input[type="file"] {
+  width: 100%;
+}
+
+.create-sticker-form input[type="submit"],
 .checkout-form input[type="submit"] {
   width: 100%;
   font-size: 25px;
@@ -85,7 +88,7 @@ html {
 .sticker-preview .demo-sticker-info .demo-sticker-price {
   display: block;
   text-align: center;
-  font-size: 25px;
+  font-size: 15px;
   padding: 10px;
 }
 
@@ -130,7 +133,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height:  calc(100vh - 90px);
+  min-height: calc(100vh - 90px);
 }
 
 .favs-coming-soon {
@@ -226,6 +229,8 @@ html {
 .auth-wrapper {
   min-height: calc(100vh - 80px);
   display: flex;
+  padding-top: 100px;
+  padding-bottom: 100px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -439,12 +444,12 @@ tfoot {
 
 .link:hover {
   color: white;
-  opacity: .9;
+  opacity: 0.9;
   box-shadow: 0 0 5px #ff1867;
 }
 
 .dashboard-h {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
